--- a/src/main/resources/templates/invoice_list_view.html
+++ b/src/main/resources/templates/invoice_list_view.html
@@ -65,7 +65,7 @@
                 </th>
 
                 <th scope="col" class="tiny-header">
-                    <label for="overTimeSearch">Over Time</label>
+                    <label for="overTimeSearch">Over Time Hours</label>
                     <input class="tiny-input searcher"
                            type="text" pattern="/d*"
                            id="overTimeSearch"
