--- a/src/main/resources/templates/manager_view.html
+++ b/src/main/resources/templates/manager_view.html
@@ -53,7 +53,7 @@
                                onkeyup="filterResults()">
                     </th>
                         <th scope="col" class="tiny-header">
-                        <label for="OverTimeSearch">Over Time</label>
+                        <label for="OverTimeSearch">Over Time Hours</label>
                         <input class="tiny-input searcher"
                                type="text" id="OverTimeSearch"
                                onkeyup="filterResults()">
