--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,7 +16,7 @@
                     <form method="post" th:action="@{/logout}">
                         <label class="custom-label">
                             <h3>
-                                You do not have access to this page:
+                                Page not found. Please use the menu dropdown.
                             </h3>
                         </label>
 
@@ -29,7 +29,7 @@
                 <div sec:authorize="!isAuthenticated()">
                     <label class="custom-label">
                         <h3>
-                            You do not have access to this page:
+                            Page not found. Please login and use the menu.
                         </h3>
                     </label>
                     <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"
