--- a/src/main/resources/templates/passwordReset.html
+++ b/src/main/resources/templates/passwordReset.html
@@ -12,7 +12,7 @@
         <div class="row mx-auto custom-form">
             <div class="col mx-auto custom-bg">
                 <div id = forgotPasswordDetails>
-                    <form action="#" method="post" th:action="@{/passwordSend}" th:object="${passwordKey}">
+                    <form action="#" method="post" th:action="@{/passwordTokenSend}" th:object="${passwordKey}">
 
                         <div class="custom-label">
                             <h3>Please Enter The Details To Reset Password</h3>
