--- a/src/main/resources/templates/confirmReset.html
+++ b/src/main/resources/templates/confirmReset.html
@@ -11,8 +11,8 @@
 
         <div class="row mx-auto custom-form">
             <div class="col mx-auto custom-bg">
-                <div id = resetUserPassword>
-                    <form action="#" method="post" th:action="@{/confirmReset}" th:object="${resetKey}">
+                <div id=resetUserPassword>
+                    <form action="#" method="post" th:action="@{/confirmResetPassword}" th:object="${resetKey}">
 
                         <div class="custom-label">
                             <h3>Please Enter The Details To Reset Password</h3>
