--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,10 +52,7 @@
 
                     <div class="row mt-4">
 
-                        <input class="g-recaptcha btn btn-lg btn-primary btn-block text-uppercase custom-btn"
-                               data-sitekey="6LdBlvwUAAAAAAXBFz25Zfw_rH8r0LqowH1NHLZQ"
-                               data-callback='onSubmit'
-                               data-action='submit'
+                        <input class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"
                                type="submit"
                                value="Sign In"/>
 
@@ -69,9 +66,4 @@
     </div>
 </main>
 </body>
-<script>
-    function onSubmit(token) {
-        document.getElementById("form").submit();
-    }
-</script>
 </html>
